@@ -56,6 +56,7 @@ Template for new versions:
 ## New Features
 
 ## Fixes
+- `getplants`: will no longer crash when faced with plants with growths that do not drop seeds when processed
 
 ## Misc Improvements
 
